--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -45,6 +45,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/current">Current</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/chat">Chat</a>
+              </li>
             {{else}}
               <li class="nav-item">
                 <a class="nav-link" href="/login">Login</a>
