--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -1,7 +1,8 @@
 <main>
   <section class="py-5 text-center container">
     <div>
-        <h1>Bienvenidos al CoderChat comunitario</h1>
+        <h1>Bienvenido al chat de eCommerce</h1>
+        <h2 id="userEmail">{{user.name}}</h2>
         <div>
             <input id="chatBox" />
         </div>
@@ -10,6 +11,5 @@
         </div>
   </section>
 </main>
-<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/chat.js"></script>
