fix products routes

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -3,7 +3,7 @@
   <div class="row justify-content-center">
     <article class="col-md-6 mt-mobile">
       <div class="col-12 text-center">
-        <a href="/api/sessions/github">
+        <a href="/sessions/github">
           <button type="submit" class="btn btn-primary">Entrar con GitHub</button>
         </a>
       </div>
