--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -42,6 +42,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/products">Products</a>
               </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/products/add_product">Add Product</a>
+                </li>
               <li class="nav-item">
                 <a class="nav-link" href="/current">Current</a>
               </li>
