--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -31,37 +31,15 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            {{#if user}}
-              <li class="nav-item">
-                <a class="nav-link" href="/logout">Logout</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/profile">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/products">Products</a>
-              </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="/products/add_product">Add Product</a>
-                </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/current">Current</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/chat">Chat</a>
-              </li>
-            {{else}}
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
-              </li>
-            {{/if}}
-          </ul>
+          <div id="userRole">{{user.role}}</div>
+          <!-- Menu NavBar -->
+          <div id="navbarSupportedContent"></div>
         </div>
       </div>
     </nav>
     {{{body}}}
-
+    <!-- JS Menu NavBar -->
+    <script src="js/menu.js"></script>
     <!-- Bootstrap Bundle with Popper -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
