--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -1,7 +1,7 @@
 <main>
   <section class="py-5 text-center container">
     <div>
-      <h1>Tu perfil (sin datos sensibles)</h1>
+      <h1>Tu perfil</h1>
       <p>Usuario: {{user.name}}</p>
       <p>Email: {{user.email}}</p>
       <p>Role: {{user.role}}</p>
