--- a/src/views/add_product.handlebars
+++ b/src/views/add_product.handlebars
@@ -35,15 +35,6 @@
           />
         </div>
         <div class="col-12">
-          <label for="price" class="form-label">Precio</label>
-          <input
-            name="price"
-            type="number"
-            class="form-control"
-            placeholder="Precio del producto"
-          />
-        </div>
-        <div class="col-12">
           <label for="code" class="form-label">Codigo</label>
           <input
             name="code"
@@ -53,11 +44,22 @@
             required
           />
         </div>
-        <div class="col-12">
+        <div class="col-6">
+          <label for="price" class="form-label">Precio</label>
+          <input
+            name="price"
+            type="number"
+            min="0"
+            class="form-control"
+            placeholder="Precio del producto"
+          />
+        </div>
+        <div class="col-6">
           <label for="stock" class="form-label">Stock</label>
           <input
             name="stock"
             type="number"
+            min="0"
             class="form-control"
             placeholder="Stock del producto"
           />
